--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,14 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "io.reactivex.rxjava2:rxjava:2.2.3"
+    compile 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 }
 
 compileKotlin {
